[package]
name = "events-api-redis-to-db"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.37.0", features = [ "sync", "time", "macros", "rt-multi-thread", "signal" ] }
redis = { version = "0.25.3", features = [ "tokio-rustls-comp", "streams", "connection-manager" ] }
dotenvy = "0.15.7"
itertools = "0.12.1"
simple_logger = "5.0.0"
log = "0.4.21"
anyhow = "1.0.82"
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "rust_decimal" ] }
serde = { version = "1.0.200", features = [ "derive" ] }
serde_json = "1.0.116"
rust_decimal = "1.35.0"
chrono = "0.4.38"
async-trait = "0.1.80"
inindexer = { git = "https://github.com/INTEARnear/inindexer" }
