[package]
name = "events-api-redis-to-db"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.37.0", features = [ "sync", "time", "macros", "rt-multi-thread" ], optional = true }
redis = { version = "0.25.3", features = [ "tokio-rustls-comp", "streams", "connection-manager" ] }
dotenvy = { version = "0.15.7", optional = true }
itertools = "0.12.1"
simple_logger = { version = "5.0.0", optional = true }
log = "0.4.21"
anyhow = "1.0.82"
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "rust_decimal" ], optional = true }
serde = { version = "1.0.200", features = [ "derive" ] }
serde_json = { version = "1.0.116", optional = true }
rust_decimal = "1.35.0"
chrono = { version = "0.4.38", optional = true }
async-trait = "0.1.80"
inindexer = { git = "https://github.com/INTEARnear/inindexer" } # Replace with near-utils when moved to a separate crate

[features]
bin = [ "sqlx", "serde_json", "chrono", "dotenvy", "simple_logger", "tokio" ]
default = [ "bin" ]
